...
        super.viewWillAppear(animated)
        setNeedsStatusBarAppearanceUpdate()
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        presenter?.viewDidload()

        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [], changeHandler: { [weak self] _, _ in
...
